--- a/sample/SilentRed.WebCore/SilentRed.WebCore.csproj
+++ b/sample/SilentRed.WebCore/SilentRed.WebCore.csproj
@@ -25,6 +25,7 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\SilentRed.Infrastructure.Mvc\SilentRed.Infrastructure.Mvc.csproj" />
     <ProjectReference Include="..\..\src\SilentRed.Infrastructure.SimpleInjector\SilentRed.Infrastructure.SimpleInjector.csproj" />
     <ProjectReference Include="..\..\src\SilentRed.Infrastructure\SilentRed.Infrastructure.csproj" />
     <ProjectReference Include="..\..\src\SilentRed.SimpleInjector.Extensions.Mediatr\SilentRed.SimpleInjector.Extensions.Mediatr.csproj" />
