--- a/sample/SilentRed.WebCore/appsettings.json
+++ b/sample/SilentRed.WebCore/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SilentRedWebCoreContext": "Server=(localdb)\\mssqllocaldb;Database=SilentRedWebCoreContext-cd8b8d5d-c017-479f-9548-46333f78dcde;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
