--- a/src/SilentRed.Infrastructure.SimpleInjector/SilentRed.Infrastructure.SimpleInjector.csproj
+++ b/src/SilentRed.Infrastructure.SimpleInjector/SilentRed.Infrastructure.SimpleInjector.csproj
@@ -2,11 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Version>1.0.1</Version>
+  </PropertyGroup>
+
+  <Import Project="..\SilentRed.packaging.props" Condition="Exists('..\SilentRed.packaging.props')" />
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>bin\Release\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SimpleInjector" Version="4.0.3" />
+    <PackageReference Include="SimpleInjector" Version="4.0.6" />
   </ItemGroup>
 
   <ItemGroup>
