--- a/src/SilentRed.Infrastructure/SilentRed.Infrastructure.csproj
+++ b/src/SilentRed.Infrastructure/SilentRed.Infrastructure.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>1.0.1</Version>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
+  <Import Project="..\SilentRed.packaging.props" Condition="Exists('..\SilentRed.packaging.props')" />
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>bin\release</OutputPath>
+    <OutputPath>bin\Release</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="6.4.1" />
-    <PackageReference Include="SimpleInjector" Version="4.0.3" />
+    <PackageReference Include="SimpleInjector" Version="4.0.6" />
   </ItemGroup>
 
   <ItemGroup>
