--- a/src/SilentRed.SimpleInjector.Extensions.Mediatr/SilentRed.SimpleInjector.Extensions.Mediatr.csproj
+++ b/src/SilentRed.SimpleInjector.Extensions.Mediatr/SilentRed.SimpleInjector.Extensions.Mediatr.csproj
@@ -11,6 +11,10 @@
     <OutputPath>bin/Release</OutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="MediatR" Version="3.0.1" />
     <PackageReference Include="SimpleInjector" Version="4.0.6" />
