--- a/sample/Studiekring.Business/Studiekring.Business.csproj
+++ b/sample/Studiekring.Business/Studiekring.Business.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="6.4.1" />
   </ItemGroup>
