--- a/src/SilentRed.Infrastructure.AspNet/SilentRed.Infrastructure.AspNet.csproj
+++ b/src/SilentRed.Infrastructure.AspNet/SilentRed.Infrastructure.AspNet.csproj
@@ -11,6 +11,14 @@
     <OutputPath>bin\Release\</OutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.1" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\SilentRed.Infrastructure.Mediatr\SilentRed.Infrastructure.Mediatr.csproj" />
     <ProjectReference Include="..\SilentRed.Infrastructure.SimpleInjector\SilentRed.Infrastructure.SimpleInjector.csproj" />
