--- a/src/SilentRed.Infrastructure.FluentValidation/SilentRed.Infrastructure.FluentValidation.csproj
+++ b/src/SilentRed.Infrastructure.FluentValidation/SilentRed.Infrastructure.FluentValidation.csproj
@@ -10,6 +10,10 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>bin\Release\</OutputPath>
   </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="6.4.1" />
