--- a/src/SilentRed.Infrastructure.SimpleInjector/SilentRed.Infrastructure.SimpleInjector.csproj
+++ b/src/SilentRed.Infrastructure.SimpleInjector/SilentRed.Infrastructure.SimpleInjector.csproj
@@ -11,6 +11,10 @@
     <OutputPath>bin\Release\</OutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="SimpleInjector" Version="4.0.6" />
   </ItemGroup>
