--- a/tests/SilentRed.Infrastructure.Tests/SilentRed.Infrastructure.Tests.csproj
+++ b/tests/SilentRed.Infrastructure.Tests/SilentRed.Infrastructure.Tests.csproj
@@ -4,6 +4,14 @@
         <TargetFramework>netcoreapp1.1</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+      <LangVersion>latest</LangVersion>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <None Remove="SilentRed.Infrastructure.Tests.v3.ncrunchproject" />
+    </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="FluentValidation" Version="6.4.1" />
         <PackageReference Include="SimpleInjector" Version="4.0.6" />
